--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,19 +9,18 @@ cors.allowed.credentials=true
 
 server.port=8082
 
-# MySQL
-spring.datasource.url=jdbc:mysql://mysql:3306/${MYSQL_DATABASE}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# PostgreSQL
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
 
-# Redis
-spring.data.redis.host=redis
-spring.data.redis.port=6379
+# Redis Cloud
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
 
 # Logging
 logging.level.root=INFO
@@ -29,10 +28,10 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
 # Mail
-spring.mail.host=live.smtp.mailtrap.io
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.from=verify@robspecs.com
+spring.mail.from=verify@robspec.com
