--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,13 +9,16 @@ cors.allowed.credentials=true
 
 server.port=8082
 
-# PostgreSQL
-spring.datasource.url=${DATABASE_URL}
+# PostgreSQL (Render)
+spring.datasource.url=jdbc:postgresql://dpg-d0lfs3ruibrs73a9hnn0-a.singapore-postgres.render.com:5432/otpdb_yn4b
+spring.datasource.username=otpdb_yn4b_user
+spring.datasource.password=SK6OIPnqrjJ3NwdGkjjsUbvRLuvXyFA0
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 # Redis Cloud
 spring.data.redis.host=${REDIS_HOST}
