--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=otp
 
 app.jwt.secret=${JWT_SECRET}
 
-cors.allowed.origins=http://localhost:3000
+cors.allowed.origins=http://localhost:3000,https://otp-deploy-frontend.onrender.com
 cors.allowed.methods=GET,POST,PUT,DELETE
 cors.allowed.headers=*
 cors.allowed.credentials=true
