--- a/client/jwt-auth-client/.dockerignore
+++ b/client/jwt-auth-client/.dockerignore
@@ -1,6 +1,37 @@
-node_modules
-build
+# Node.js dependencies
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.pnp.*
+
+# Build artifacts (if you build locally before copying to image)
+build/
+dist/
+
+# Editor/IDE specific files
+.vscode/
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Environment variables
 .env
-.git
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Git
+.git/
 .gitignore
-README.md
+
+# Logs and temporary files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+Thumbs.db
+*.log
+*.tmp
